--- a/main.html
+++ b/main.html
@@ -86,13 +86,13 @@
 
     <!-- Checkbox -->
     <div class="checkbox-container">
-      <input type="checkbox" id="dogBefore" name="checkbox" value="Have you ever lived with a Dog before?">
-      <label for="dogBefore">Have you ever lived with a Dog before?</label>
+      <input type="checkbox" id="checkbox" name="checkbox" value="Have you ever lived with a Dog before?">
+      <label for="checkbox">Have you ever lived with a Dog before?</label>
     </div>
 
     <!-- Multi-select -->
-    <label for="breeds">Please select your preferred breeds</label>
-    <select id="breeds" name="multiSelect" multiple>
+    <label for="multiSelect">Please select your preferred breeds</label>
+    <select id="multiSelect" name="multiSelect" multiple>
       <option value="labrador">Labrador Retriever</option>
       <option value="germanShepherd">German Shepherd</option>
       <option value="goldenRetriever">Golden Retriever</option>
